[metadata]
name = HiDocBackEnd
author = HiDoc Solutions
author-email = mkelly@hidoc.com.mx
summary = HiDocBackEnd es la aplicación sobre django para dar servicio de backend a la aplicación de HiDoc.
description-file = README.md
home-page = http://www.hidoc.com.mx
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2
    Development Status :: 1 - PreAlpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Utilities
